Fix gaps and alignment, change photos

--- a/style_OK.css
+++ b/style_OK.css
@@ -25,17 +25,14 @@ body {
     
 }
 
-.jumbotron {
-    
-    
-    margin-top: 90px;
+.jumbotron {  
+    margin-top: 80px;
     padding-top: 200px;
-    padding-right: 20px;
+    padding-right: 0px;
     max-height:400px;
     }
 
-#motto {
-   
+#motto {   
     font-style:italic;
     font-weight:300;
     text-shadow: 3px 3px 10px #262262 ;
@@ -94,10 +91,7 @@ p {
     margin: auto 0;
     margin-top: 50px;
 }
-.carousel {
-    margin-top:50px;
-    margin-bottom: 100px;
-}
+
 
 footer:not(.footer__client) {
     height: 150px;
@@ -128,50 +122,38 @@ approach_img1 {
 #grad_img1 {background-image:
     linear-gradient(to right, transparent, 80%, #262262),
     url('img/12.jpg');
-    border:0;
-    
+    border:0;    
     background-size: cover;    
     height:500px;
-
     margin-right: -15px;
     padding: 0px;
 }
 
 #grad_img2 {background-image:
     linear-gradient(to left, transparent, 80%,  #262262),
-    url('img/24.JPG');
-    border:0;
-    
+    url('img/22cr.jpg');
+    border:0;    
     background-size: cover;    
     height:500px;
-
     margin-left: -15px;
-    padding: 0px;
-
-    
+    padding: 0px;    
 }
      
 
 #grad_img3 {background-image:
     linear-gradient(to right, transparent, 80%, #262262),
-    url('img/19.jpeg');
-    border:0;
-    
-    background-size: cover;
-    
+    url('img/11.JPG');
+    border:0;    
+    background-size: cover;    
     height:500px;
-
     margin-right: -15px;
     padding: 0px;
-
 }
-
-
 
 .text-secondary {
-    color:#002060;
-    
+    color:#002060;    
 }
+
 .card-body {
     background-color: #262262;
 }
@@ -302,4 +284,4 @@ approach_img1 {
     }
   }
     
-  
+    
